testdata/e2e/examples/patch/chainsaw-test.yaml
# yaml-language-server: $schema=../../../../.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: patch
spec:
  steps:
  - description: "Patch a ConfigMap"
    try:
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            foo: bar
    - patch:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            lorem: ipsum
    - assert:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: quick-start
          data:
            foo: bar
            lorem: ipsum
  - description: "Patch the 'status' subresource of a Pod"
    try:
      - apply:
          resource:
            apiVersion: v1
            kind: Pod
            metadata:
              name: test-pod
            spec:
              containers:
                - name: test-container
                  image: busybox
      - patch:
          resource:
            apiVersion: v1
            kind: Pod
            metadata:
              name: test-pod
              annotations:
                chainsaw.kyverno.io/patch-subresource: status
            status:
              conditions:
                - type: TestCondition
                  status: "True"
                  reason: TestReason
                  message: TestMessage
                  lastTransitionTime: "2026-03-28T10:51:35Z"
      - assert:
          resource:
            apiVersion: v1
            kind: Pod
            metadata:
              name: test-pod
            status:
              conditions:
                - type: TestCondition
                  status: "True"
                  reason: TestReason
                  message: TestMessage
                  lastTransitionTime: "2026-03-28T10:51:35Z"
